--- a/src/Socean.Rpc.Core/Socean.Rpc.Core.csproj
+++ b/src/Socean.Rpc.Core/Socean.Rpc.Core.csproj
@@ -44,21 +44,19 @@
     <Compile Include="Client\IClientFactory.cs" />
     <Compile Include="Client\QueryContext.cs" />
     <Compile Include="Client\IClient.cs" />
-    <Compile Include="Client\AutoReconnectRpcClientFactory.cs" />
-    <Compile Include="Client\ShortConnectionRpcClient.cs" />
-    <Compile Include="Client\ShortConnectionRpcClientFactory.cs" />
-    <Compile Include="ITransport.cs" />
+    <Compile Include="Client\SimpleRpcClientFactory.cs" />
+    <Compile Include="Client\FastRpcClient.cs" />
     <Compile Include="Server\IServer.cs" />
-    <Compile Include="TransportHostBase.cs" />
+    <Compile Include="TcpTransportHostBase.cs" />
     <Compile Include="LogAgent.cs" />
     <Compile Include="Message\FrameHeaderData.cs" />
     <Compile Include="Message\FrameFormat.cs" />
     <Compile Include="Message\FrameData.cs" />
     <Compile Include="ReceiveCallbackData.cs" />
     <Compile Include="ReceiveProcessor.cs" />
-    <Compile Include="Client\AutoReconnectRpcClient.cs" />
+    <Compile Include="Client\SimpleRpcClient.cs" />
     <Compile Include="ResponseBase.cs" />
-    <Compile Include="ResponseErrorCode.cs" />
+    <Compile Include="ResponseCode.cs" />
     <Compile Include="NetworkSettings.cs" />
     <Compile Include="Server\KeepAliveRpcServer.cs" />
     <Compile Include="IMessageProcessor.cs" />
