--- a/src/Socean.Rpc/Socean.Rpc.csproj
+++ b/src/Socean.Rpc/Socean.Rpc.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EE89CB4-00E3-4B07-8C89-01729FDB31A2}</ProjectGuid>
+    <ProjectGuid>{6418454B-6225-4B50-86C2-742FEB840CDE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Socean.Rpc.Core</RootNamespace>
-    <AssemblyName>Socean.Rpc.Core</AssemblyName>
+    <RootNamespace>Socean.Rpc</RootNamespace>
+    <AssemblyName>Socean.Rpc</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,27 +41,27 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client\IClientFactory.cs" />
-    <Compile Include="Client\QueryContext.cs" />
-    <Compile Include="Client\IClient.cs" />
-    <Compile Include="Client\SimpleRpcClientFactory.cs" />
-    <Compile Include="Client\FastRpcClient.cs" />
-    <Compile Include="Server\IServer.cs" />
-    <Compile Include="TcpTransportHostBase.cs" />
-    <Compile Include="LogAgent.cs" />
-    <Compile Include="Message\FrameHeaderData.cs" />
-    <Compile Include="Message\FrameFormat.cs" />
-    <Compile Include="Message\FrameData.cs" />
-    <Compile Include="ReceiveCallbackData.cs" />
-    <Compile Include="ReceiveProcessor.cs" />
-    <Compile Include="Client\SimpleRpcClient.cs" />
-    <Compile Include="ResponseBase.cs" />
-    <Compile Include="ResponseCode.cs" />
-    <Compile Include="NetworkSettings.cs" />
-    <Compile Include="IMessageProcessor.cs" />
-    <Compile Include="Server\RpcServer.cs" />
+    <Compile Include="Core\Client\IClientFactory.cs" />
+    <Compile Include="Core\Client\QueryContext.cs" />
+    <Compile Include="Core\Client\IClient.cs" />
+    <Compile Include="Core\Client\SimpleRpcClientFactory.cs" />
+    <Compile Include="Core\Client\FastRpcClient.cs" />
+    <Compile Include="Core\Server\IServer.cs" />
+    <Compile Include="Core\TcpTransportHostBase.cs" />
+    <Compile Include="Core\LogAgent.cs" />
+    <Compile Include="Core\Message\FrameHeaderData.cs" />
+    <Compile Include="Core\Message\FrameFormat.cs" />
+    <Compile Include="Core\Message\FrameData.cs" />
+    <Compile Include="Core\ReceiveCallbackData.cs" />
+    <Compile Include="Core\ReceiveProcessor.cs" />
+    <Compile Include="Core\Client\SimpleRpcClient.cs" />
+    <Compile Include="Core\ResponseBase.cs" />
+    <Compile Include="Core\ResponseCode.cs" />
+    <Compile Include="Core\NetworkSettings.cs" />
+    <Compile Include="Core\IMessageProcessor.cs" />
+    <Compile Include="Core\Server\RpcServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpTransport.cs" />
+    <Compile Include="Core\TcpTransport.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
