--- a/src/Socean.Rpc/Socean.Rpc.csproj
+++ b/src/Socean.Rpc/Socean.Rpc.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Client\AsyncQueryContext.cs" />
+    <Compile Include="Core\Client\RequestMessageConstructor.cs" />
     <Compile Include="Core\Client\SyncQueryContext.cs" />
     <Compile Include="Core\Client\IClient.cs" />
     <Compile Include="CoreExtention\SimpleRpcClientPoolRoot.cs" />
