--- a/src/Socean.Rpc/Socean.Rpc.csproj
+++ b/src/Socean.Rpc/Socean.Rpc.csproj
@@ -38,7 +38,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\BytesCache.cs" />
     <Compile Include="Core\Client\AsyncQueryContext.cs" />
+    <Compile Include="Core\Client\HighResponseAsyncQueryContext.cs" />
+    <Compile Include="Core\Client\QueryContextAwaiter.cs" />
+    <Compile Include="Core\Client\QueryContextTaskCompletionSource.cs" />
     <Compile Include="Core\Client\RequestMessageConstructor.cs" />
     <Compile Include="Core\Client\SyncQueryContext.cs" />
     <Compile Include="Core\Client\IClient.cs" />
